--- a/build.gradle
+++ b/build.gradle
@@ -25,3 +25,9 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+ext{
+    version_retrofit = '2.9.0'
+    version_retrofit_coroutines = '0.9.2'
+    version_moshi = '1.12.0'
+    version_coroutines = '1.4.3'
+}
