--- a/build.gradle
+++ b/build.gradle
@@ -30,4 +30,5 @@ ext{
     version_retrofit_coroutines = '0.9.2'
     version_moshi = '1.12.0'
     version_coroutines = '1.4.3'
+    version_koin= "3.1.2"
 }
