--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation "io.insert-koin:koin-core:$version_koin"
     // Testing
     testImplementation "io.insert-koin:koin-test:$version_koin"
+    implementation "io.insert-koin:koin-android:$version_koin"
 
     //Retrofit dependencies
     implementation "com.squareup.retrofit2:retrofit:$version_retrofit"
