--- a/build.gradle
+++ b/build.gradle
@@ -30,5 +30,6 @@ ext{
     version_moshi = '1.12.0'
     version_coroutines = '1.4.3'
     version_koin= "3.1.2"
+    version_room = '2.3.0'
     version_lifecycle = '2.3.1'
 }
