--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     //Dependency injection KOIN
     // Koin for Kotlin apps
     implementation "io.insert-koin:koin-core:$version_koin"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     // Testing
     testImplementation "io.insert-koin:koin-test:$version_koin"
     implementation "io.insert-koin:koin-android:$version_koin"
