--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LetsWatch">
         <activity android:name=".ui.details.DetailsActivity" />
-        <activity android:name=".ui.mainactivity.MainActivity">
+        <activity android:name=".ui.mainactivity.MainActivity"
+            android:exported="true"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
