--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,13 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.5.21"
+    ext.kotlin_version = "1.6.10"
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.2.2"
+        classpath 'com.android.tools.build:gradle:7.0.4'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+
     }
 }
 
@@ -17,7 +15,6 @@ allprojects {
     repositories {
         google()
         mavenCentral()
-        jcenter() // Warning: this repository is going to shut down soon
     }
 }
 
@@ -30,8 +27,11 @@ ext{
     version_moshi = '1.12.0'
     version_coroutines = '1.4.3'
     version_koin= "3.1.2"
-    version_room = '2.3.0'
-    version_lifecycle = '2.3.1'
+    version_room = '2.4.0'
+    version_lifecycle = '2.4.0'
     version_glide = '4.12.0'
-    version_paging = '3.0.0'
+    version_paging = '3.1.0'
+    version_core = '1.7.0'
+    version_appcompat = '1.4.0'
+    version_constraint_layout = '2.1.2'
 }
