--- a/build.gradle
+++ b/build.gradle
@@ -22,16 +22,19 @@ task clean(type: Delete) {
     delete rootProject.buildDir
 }
 ext{
-    version_retrofit = '2.9.0'
-    version_retrofit_coroutines = '0.9.2'
-    version_moshi = '1.13.0'
-    version_coroutines = '1.4.3'
-    version_koin= "3.1.2"
-    version_room = '2.4.1'
-    version_lifecycle = '2.4.0'
-    version_glide = '4.12.0'
-    version_paging = '3.1.0'
-    version_core = '1.7.0'
-    version_appcompat = '1.4.0'
-    version_constraint_layout = '2.1.2'
+    retrofit_version = '2.9.0'
+    retrofit_coroutines_version = '0.9.2'
+    moshi_version = '1.13.0'
+    coroutines_version = '1.4.3'
+    koin_version= "3.1.2"
+    room_version = '2.4.1'
+    lifecycle_version = '2.4.0'
+    glide_version = '4.12.0'
+    paging_version = '3.1.0'
+    core_version = '1.7.0'
+    test_core_version = '1.4.0'
+    appcompat_version = '1.4.0'
+    constraint_layout_version = '2.1.2'
+    mockito_version = '4.2.0'
+    junit_version = '4.13.2'
 }
