--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,7 +66,7 @@ dependencies {
 
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
-
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     //Paging Library for efficiente listing of data
     implementation("androidx.paging:paging-runtime-ktx:$paging_version")
     testImplementation("androidx.paging:paging-common-ktx:$paging_version")
