--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,8 @@ dependencies {
     implementation "io.insert-koin:koin-android:$koin_version"
     testImplementation 'androidx.test:core:1.4.0'
     testImplementation "org.mockito:mockito-core:$mockito_version"
+    testImplementation "io.mockk:mockk:$mockk_version"
+    testImplementation "io.mockk:mockk-agent-jvm:$mockk_version"
     testImplementation "junit:junit:$junit_version"
     testImplementation "com.google.truth:truth:1.1.3"
     androidTestImplementation "org.mockito:mockito-android:$mockito_version"
